k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sber-monitoring-test
  namespace: kovaliov2700-dev
  labels:
    app: sber-monitoring-test
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sber-monitoring-test
  template:
    metadata:
      labels:
        app: sber-monitoring-test
    spec:
      containers:
      - name: app
        image: image-registry.openshift-image-registry.svc:5000/kovaliov2700-dev/sber-monitoring:latest
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8000
          name: metrics
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sber-monitoring-prod
  namespace: kovaliov2700-dev
  labels:
    app: sber-monitoring-prod
spec:
  replicas: 0
  selector:
    matchLabels:
      app: sber-monitoring-prod
  template:
    metadata:
      labels:
        app: sber-monitoring-prod
    spec:
      containers:
      - name: app
        image: image-registry.openshift-image-registry.svc:5000/kovaliov2700-dev/sber-monitoring:latest
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8000
          name: metrics
        imagePullPolicy: Always
