k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sber-monitoring
spec:
  selector:
    app: sber-monitoring
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer
