k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sber-monitoring-route
  namespace: art2010901-dev
spec:
  to:
    kind: Service
    name: sber-monitoring
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
